--- a/index.html
+++ b/index.html
@@ -5,66 +5,113 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kevin HTNG - Links</title>
   <style>
-body {
-  font-family: sans-serif;
-  text-align: center;
-  background: #000000;       /* Black background */
-  color: #ffffff;            /* White text */
-  margin: 0;
-  padding: 0;
-}
-.container {
-  max-width: 500px;
-  margin: 2rem auto;
-  padding: 1rem;
-}
-img.profile {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 1rem;
-  border: 2px solid #d60000; /* Optional: red border around image */
-}
-h1 {
-  font-size: 1.8rem;
-  margin-bottom: 0.5rem;
-}
-p {
-  color: #ffffff;
-  font-size: 1rem;
-  margin-bottom: 1.5rem;
-}
-a.link-button {
-  display: block;
-  background-color: #d60000;  /* Red buttons */
-  color: white;
-  padding: 12px 20px;
-  text-decoration: none;
-  border-radius: 8px;
-  margin: 10px 0;
-  font-weight: bold;
-  transition: background-color 0.2s ease-in-out;
-}
-a.link-button:hover {
-  background-color: #a20000;  /* Darker red on hover */
-}
+    /* Floating banner */
+    .floating-banner {
+      position: fixed;
+      top: 0;
+      left: 100%;
+      white-space: nowrap;
+      background-color: #d60000;
+      color: #FFD700;
+      font-weight: bold;
+      padding: 8px 20px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      animation: slide-left 15s linear infinite;
+      z-index: 9999;
+      font-family: sans-serif;
+      font-size: 1rem;
+    }
+    @keyframes slide-left {
+      0% {
+        left: 100%;
+      }
+      100% {
+        left: -100%;
+      }
+    }
+
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      background: #000000;
+      color: #ffffff;
+      margin: 0;
+      padding-top: 40px;
+    }
+    .container {
+      max-width: 500px;
+      margin: 2rem auto;
+      padding: 1rem;
+    }
+    img.profile {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1rem;
+      border: 2px solid #d60000;
+    }
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      color: #ffffff;
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    a.link-button {
+      display: block;
+      background-color: #d60000;
+      color: white;
+      padding: 12px 20px;
+      text-decoration: none;
+      border-radius: 8px;
+      margin: 10px 0;
+      font-weight: bold;
+      transition: all 0.2s ease-in-out;
+      transform: scale(1);
+    }
+    a.link-button:hover {
+      background-color: #a20000;
+      transform: scale(1.05);
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.8rem;
+      color: #888;
+    }
   </style>
 </head>
 <body>
+  <div class="floating-banner">
+    🚀 <strong>Help me help you get rich.</strong> 🔥
+  </div>
+
   <div class="container">
     <img class="profile" src="kids.jpg" alt="me" />
     <h1>@kevinhtng</h1>
     <p>Welcome! Here are my links 👇</p>
-    
-    <!-- Replace these with your actual links -->
-    <a class="link-button" href="http://share.aceable.com/3ffVls" target="_blank">🏠 Real Estate License Discount </a>
-    <a class="link-button" href="https://www.zillow.com/profile/Kevin-Hoang-Nguyen" target="_blank">🏠 Zillow </a>
-    <a class="link-button" href="https://www.bovada.lv/welcome/PB9W8GV/join?extcmpid=rafcopy">🏀 Bovada Sports Betting Free Credits </a>
-    <a class="link-button" href="https://share.public.com/investkevin">📈 FREE Public Stock! </a>
-    <a class="link-button" href="https://join.robinhood.com/kevinn2567">📈 FREE Robinhood Stock! </a>
-    <a class="link-button" href="https://fetchrewards.onelink.me/vvv3/referraltext?code=42TPT">💸 FREE GIFT CARDS - Fetch </a>
-    <a class="link-button" href="https://opensea.io/?ref=0xd3ba4eac8ab02c825df7568d0833e46e24b833c9">🪙 Create & Buy NFTs! (opensea.io) </a>
+
+    <a class="link-button" href="http://share.aceable.com/3ffVls" target="_blank">🏠 Real Estate License Discount</a>
+    <a class="link-button" href="https://www.zillow.com/profile/Kevin-Hoang-Nguyen" target="_blank">🏠 Zillow</a>
+    <a class="link-button" href="https://www.bovada.lv/welcome/PB9W8GV/join?extcmpid=rafcopy" target="_blank">🏀 Bovada Sports Betting Free Credits</a>
+    <a class="link-button" href="https://share.public.com/investkevin" target="_blank">📈 FREE Public Stock!</a>
+    <a class="link-button" href="https://join.robinhood.com/kevinn2567" target="_blank">📈 FREE Robinhood Stock!</a>
+    <a class="link-button" href="https://fetchrewards.onelink.me/vvv3/referraltext?code=42TPT" target="_blank">💸 FREE GIFT CARDS - Fetch</a>
+    <a class="link-button" href="https://opensea.io/?ref=0xd3ba4eac8ab02c825df7568d0833e46e24b833c9" target="_blank">🪙 Create & Buy NFTs! (opensea.io)</a>
+
+    <!-- Contact Me button -->
+    <a class="link-button" href="mailto:kevinngrealtor@gmail.com?subject=Contact%20from%20your%20website&body=Hi%20Kevin,%20I%20saw%20your%20site%20and..." target="_blank">
+      📬 Contact Me: kevinngrealtor@gmail.com | 832-525-3584
+    </a>
+
+    <footer>
+      © 2025 Kevin H Nguyen. All rights reserved.
+    </footer>
   </div>
 </body>
 </html>
+
