--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kevin HTNG - Links</title>
+  <title>@kevinhtng</title>
   <style>
     /* Floating banner */
     .floating-banner {
@@ -18,11 +18,12 @@
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      animation: slide-left 15s linear infinite;
+      animation: slide-left 10s linear infinite;
       z-index: 9999;
       font-family: sans-serif;
       font-size: 1rem;
     }
+
     @keyframes slide-left {
       0% {
         left: 100%;
@@ -40,11 +41,13 @@
       margin: 0;
       padding-top: 40px;
     }
+
     .container {
       max-width: 500px;
       margin: 2rem auto;
       padding: 1rem;
     }
+
     img.profile {
       width: 120px;
       height: 120px;
@@ -53,15 +56,18 @@
       margin-bottom: 1rem;
       border: 2px solid #d60000;
     }
+
     h1 {
       font-size: 1.8rem;
       margin-bottom: 0.5rem;
     }
+
     p {
       color: #ffffff;
       font-size: 1rem;
       margin-bottom: 1.5rem;
     }
+
     a.link-button {
       display: block;
       background-color: #d60000;
@@ -74,10 +80,26 @@
       transition: all 0.2s ease-in-out;
       transform: scale(1);
     }
+
     a.link-button:hover {
       background-color: #a20000;
       transform: scale(1.05);
     }
+
+    /* Special styling for Contact Me button */
+    a.contact-button {
+      background-color: transparent;
+      border: 2px solid #FFD700;
+      color: #FFD700;
+      box-shadow: 0 0 8px #FFD700;
+    }
+
+    a.contact-button:hover {
+      background-color: #FFD700;
+      color: #000;
+      transform: scale(1.05);
+    }
+
     footer {
       margin-top: 40px;
       font-size: 0.8rem;
@@ -95,17 +117,22 @@
     <h1>@kevinhtng</h1>
     <p>Welcome! Here are my links 👇</p>
 
-    <a class="link-button" href="http://share.aceable.com/3ffVls" target="_blank">🏠 Real Estate License Discount</a>
-    <a class="link-button" href="https://www.zillow.com/profile/Kevin-Hoang-Nguyen" target="_blank">🏠 Zillow</a>
-    <a class="link-button" href="https://www.bovada.lv/welcome/PB9W8GV/join?extcmpid=rafcopy" target="_blank">🏀 Bovada Sports Betting Free Credits</a>
-    <a class="link-button" href="https://share.public.com/investkevin" target="_blank">📈 FREE Public Stock!</a>
-    <a class="link-button" href="https://join.robinhood.com/kevinn2567" target="_blank">📈 FREE Robinhood Stock!</a>
-    <a class="link-button" href="https://fetchrewards.onelink.me/vvv3/referraltext?code=42TPT" target="_blank">💸 FREE GIFT CARDS - Fetch</a>
+    <a class="link-button" href="http://share.aceable.com/3ffVls" target="_blank">🔑 Real Estate License Discount</a>
+    <a class="link-button" href="https://www.zillow.com/profile/Kevin-Hoang-Nguyen" target="_blank">🏡 Zillow</a>
+    <a class="link-button" href="https://www.google.com/search?sca_esv=aedf5bb4ef8e9c7e&hl=en-US&authuser=1&sxsrf=AHTn8zpP8DdJdQ0aKHkVOsKhOKavDkGCyA:1746905804813&kgmid=/g/11svdmz7jx&q=Kevin+Hoang+Nguyen+Realtor&shndl=30&shem=vidc" target="_blank">📍 Real Estate Google Reviews</a>
+    <a class="link-button" href="https://www.bovada.lv/welcome/PB9W8GV/join?extcmpid=rafcopy" target="_blank">🥊 Bovada Sports Betting FREE $200</a>
+    <a class="link-button" href="https://app.prizepicks.com/sign-up?invite_code=PR-PXFEPPY&source=iosShare" target="_blank">🏀 PrizePicks Sports Betting FREE $50</a>
+    <a class="link-button" href="https://share.public.com/investkevin" target="_blank">📈 FREE Public Stock</a>
+    <a class="link-button" href="https://join.robinhood.com/kevinn2567" target="_blank">📈 FREE Robinhood Stock</a>
+    <a class="link-button" href="https://referral.fetch.com/vvv3/referralqr?code=42TPT" target="_blank">💸 FREE GIFT CARDS - Fetch (CODE: 42TPT)</a>
     <a class="link-button" href="https://opensea.io/?ref=0xd3ba4eac8ab02c825df7568d0833e46e24b833c9" target="_blank">🪙 Create & Buy NFTs! (opensea.io)</a>
 
-    <!-- Contact Me button -->
-    <a class="link-button" href="mailto:kevinngrealtor@gmail.com?subject=Contact%20from%20your%20website&body=Hi%20Kevin,%20I%20saw%20your%20site%20and..." target="_blank">
-      📬 Contact Me: kevinngrealtor@gmail.com | 832-525-3584
+    <!-- Divider line -->
+    <hr style="border: none; border-top: 1px solid #444; margin: 30px 0;" />
+
+    <!-- Highlighted Contact Me button -->
+    <a class="link-button contact-button" href="mailto:kevinngrealtor@gmail.com?subject=Contact%20from%20your%20website&body=Hi%20Kevin,%20I%20saw%20your%20site%20and..." target="_blank">
+      📬 Contact Me
     </a>
 
     <footer>
@@ -114,4 +141,5 @@
   </div>
 </body>
 </html>
+
 
