--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div class="floating-banner">
-    🚀 <strong>Help me help you get rich.</strong> 🔥
+    🫓 <strong>Risk it for the biscuit!</strong> 🥮
   </div>
 
   <div class="container">
