--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div class="floating-banner">
-    🫓 <strong>Risk it for the biscuit!</strong> 🥮
+    🎲 <strong>Risk it for the biscuit!</strong> 🥮🧧
   </div>
 
   <div class="container">
