--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </div>
 
   <div class="container">
-    <img class="profile" src="me.jpg" alt="me" />
+    <img class="profile" src="me.jpeg" alt="me" />
     <h1>@kevinhtng</h1>
     <p>Welcome! Here are my links 👇</p>
 
